// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IndexNav > 目次を閉じる時にテキストがCLOSEになること 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="IndexNav_styles_indexNav__1l5ojl01"
      >
        <div
          class="BaseNavIcon_styles_navIcon__k763ln4"
        >
          <button
            class="BaseNavIcon_styles_buttonReset__k763ln3"
            data-testid="targetNavButton"
          >
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconTopOpen__k763ln8"
              data-testid="targetNavTop"
            />
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconMiddleFade__k763ln9"
              data-testid="targetNavMiddle"
            />
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconBottomOpen__k763lna"
              data-testid="targetNavBottom"
            />
            <span
              class="BaseNavIcon_styles_navIconText__k763lnb"
              data-testid="targetNavText"
            >
              CLOSE
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="IndexNav_styles_indexNav__1l5ojl01"
    >
      <div
        class="BaseNavIcon_styles_navIcon__k763ln4"
      >
        <button
          class="BaseNavIcon_styles_buttonReset__k763ln3"
          data-testid="targetNavButton"
        >
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconTopOpen__k763ln8"
            data-testid="targetNavTop"
          />
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconMiddleFade__k763ln9"
            data-testid="targetNavMiddle"
          />
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconBottomOpen__k763lna"
            data-testid="targetNavBottom"
          />
          <span
            class="BaseNavIcon_styles_navIconText__k763lnb"
            data-testid="targetNavText"
          >
            CLOSE
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`IndexNav > 目次を開く時にテキストがINDEXになること 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="IndexNav_styles_indexNav__1l5ojl01"
      >
        <div
          class="BaseNavIcon_styles_navIcon__k763ln4"
        >
          <button
            class="BaseNavIcon_styles_buttonReset__k763ln3"
            data-testid="targetNavButton"
          >
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconTopClose__k763ln6"
              data-testid="targetNavTop"
            />
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5"
              data-testid="targetNavMiddle"
            />
            <span
              class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconBottomClose__k763ln7"
              data-testid="targetNavBottom"
            />
            <span
              class="BaseNavIcon_styles_navIconText__k763lnb"
              data-testid="targetNavText"
            >
              INDEX
            </span>
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="IndexNav_styles_indexNav__1l5ojl01"
    >
      <div
        class="BaseNavIcon_styles_navIcon__k763ln4"
      >
        <button
          class="BaseNavIcon_styles_buttonReset__k763ln3"
          data-testid="targetNavButton"
        >
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconTopClose__k763ln6"
            data-testid="targetNavTop"
          />
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5"
            data-testid="targetNavMiddle"
          />
          <span
            class="BaseNavIcon_styles_navIconBorder__k763ln5 BaseNavIcon_styles_navIconBottomClose__k763ln7"
            data-testid="targetNavBottom"
          />
          <span
            class="BaseNavIcon_styles_navIconText__k763lnb"
            data-testid="targetNavText"
          >
            INDEX
          </span>
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
